removed repositories and replaced with centrally managed DB